Added main structure in index.html, first styles in style.css, added background image to project

--- a/index.html
+++ b/index.html
@@ -2,9 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Recipe for pancakes</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
 </head>
 <body>
-
+    <main>
+        <article>
+            <h1>Pancakes</h1>
+            <section>
+                <h3>Ingredients</h3>
+                <ul>
+                    <li>egg</li>
+                    <li>1 cup of floor</li>
+                    <li>1/2 glass of milk</li>
+                    <li>1 teaspoon of baking powder</li>
+                    <li>a pinch of salt</li>
+                    <li>some still or sparkling water</li>
+                    <li>oil</li>
+                    <li>jam/cheese</li>
+                </ul>
+            </section>
+        </article>
+        <article>
+            <h3>Instructions</h3>
+            <section>
+                <ol>
+                    <li>Take a bowl and beat an egg, then combine it with flour, milk and water.</li>
+                    <li>Add salt and baking powder, after that combine it gently with all the ingredients.</li>
+                    <li>Put the bowl with the dough aside for a few minutes, so that it gets the right texture.</li>
+                    <li>In the meantime pour some oil over the frying pan.</li>
+                    <li>Once the frying pan is hot enough, you can start making pancakes. First,
+                        fry a pancake on its one side till it turns light brown, and then flip it over.
+                        Fry it on the other side as long as you observe it is ready to serve.</li>
+                    <li>Put the pancake on the plate and fill it with jam, cheese or whatever you prefer.</li>
+                    <li>Then roll it and serve with some fruit, chocolate, or even ice cream.</li>
+                </ol>
+            </section>
+        </article>
+        <footer>
+            <p>Enjoy your meal!</p>
+        </footer>
+    </main>
 </body>
 </html>
