--- a/index.html
+++ b/index.html
@@ -9,42 +9,47 @@
     <link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main>
-        <article>
-            <h1>Pancakes</h1>
-            <section>
-                <h3>Ingredients</h3>
-                <ul>
-                    <li>egg</li>
-                    <li>1 cup of floor</li>
-                    <li>1/2 glass of milk</li>
-                    <li>1 teaspoon of baking powder</li>
-                    <li>a pinch of salt</li>
-                    <li>some still or sparkling water</li>
-                    <li>oil</li>
-                    <li>jam/cheese</li>
+    <section class="wrapper">
+        <img src="pancakes-background.jpg" alt="pancakes">
+        <section class="title">
+            <h1 class="main-title">Pancakes</h1>
+        </section>
+        <article class="ingredients">
+            <h3 class="ingredients-title">Ingredients</h3>
+            <section class="ingredients-box">
+                <ul class="ingredients-list">
+                    <li class="ingredients-list-item">egg</li>
+                    <li class="ingredients-list-item">1 cup of floor</li>
+                    <li class="ingredients-list-item">1/2 glass of milk</li>
+                    <li class="ingredients-list-item">1 teaspoon of baking powder</li>
+                    <li class="ingredients-list-item">a pinch of salt</li>
+                    <li class="ingredients-list-item">some still or sparkling water</li>
+                    <li class="ingredients-list-item">oil</li>
+                    <li class="ingredients-list-item">jam/cheese</li>
                 </ul>
             </section>
         </article>
-        <article>
-            <h3>Instructions</h3>
-            <section>
-                <ol>
-                    <li>Take a bowl and beat an egg, then combine it with flour, milk and water.</li>
-                    <li>Add salt and baking powder, after that combine it gently with all the ingredients.</li>
-                    <li>Put the bowl with the dough aside for a few minutes, so that it gets the right texture.</li>
-                    <li>In the meantime pour some oil over the frying pan.</li>
-                    <li>Once the frying pan is hot enough, you can start making pancakes. First,
+        <article class="instructions">
+            <section class="instructions-tittle-box">
+                <h3 class="instructions-title">Instructions</h3>
+            </section>
+            <section class="instructions-box">
+                <ol class="instructions-list">
+                    <li class="instructions-list-item">Take a bowl and beat an egg, then combine it with flour, milk and water.</li>
+                    <li class="instructions-list-item">Add salt and baking powder, after that combine it gently with all the ingredients.</li>
+                    <li class="instructions-list-item">Put the bowl with the dough aside for a few minutes, so that it gets the right texture.</li>
+                    <li class="instructions-list-item">In the meantime pour some oil over the frying pan.</li>
+                    <li class="instructions-list-item">Once the frying pan is hot enough, you can start making pancakes. First,
                         fry a pancake on its one side till it turns light brown, and then flip it over.
                         Fry it on the other side as long as you observe it is ready to serve.</li>
-                    <li>Put the pancake on the plate and fill it with jam, cheese or whatever you prefer.</li>
-                    <li>Then roll it and serve with some fruit, chocolate, or even ice cream.</li>
+                    <li class="instructions-list-item">Put the pancake on the plate and fill it with jam, cheese or whatever you prefer.</li>
+                    <li class="instructions-list-item">Then roll it and serve with some fruit, chocolate, or even ice cream.</li>
                 </ol>
             </section>
         </article>
-        <footer>
-            <p>Enjoy your meal!</p>
+        <footer class="footer-box">
+            <p class="footer-text">Enjoy your meal!</p>
         </footer>
-    </main>
+    </section>
 </body>
 </html>
