Added first media queries

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             </aside>
         </section>
         <footer class="flex-box">
-            <section class="footer-box background">
-                <p class="footer-text flex-box">Enjoy your meal!</p>
+            <section class="footer-box">
+                <p class="footer-text flex-box background">Enjoy your meal!</p>
             </section>
         </footer>
     </section>
