Changed background properties

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                             <li class="instructions-list-item">In the meantime pour some oil over the frying pan.</li>
                             <li class="instructions-list-item">Once the frying pan is hot enough, you can start making pancakes. First,
                                 fry a pancake on its one side till it turns light brown, and then flip it over.
-                                Fry it on the other side as long as you observe it is ready to serve.</li>
+                                Fry it on the other side as long as you observe it is ready to serve.
+                            </li>
                             <li class="instructions-list-item">Put the pancake on the plate and fill it with jam, cheese or whatever you prefer.</li>
                             <li class="instructions-list-item">Then roll it and serve with some fruit, chocolate, or even ice cream.</li>
                         </ol>
@@ -52,7 +53,7 @@
         </section>
         <footer class="flex-box">
             <section class="footer-box">
-                <p class="footer-text flex-box background">Enjoy your meal!</p>
+               <p class="footer-text flex-box background">Enjoy your meal!</p>
             </section>
         </footer>
     </section>
