Added new media queries for 700px and 429px, edited media queries for 992px and above

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
         </section>
         <section class="main-columns">
             <main>
-                <article class="ingredients flex-box">
+                <article class="ingredients">
                     <section class="ingredients-box background">
-                        <h3 class="ingredients-title flex-box font-size-title">Ingredients</h3>
+                        <h3 class="ingredients-title flex-box">Ingredients</h3>
                         <ul class="ingredients-list margin-padding-list">
-                            <li class="ingredients-list-item font-size-items">egg</li>
-                            <li class="ingredients-list-item font-size-items">1 cup of floor</li>
-                            <li class="ingredients-list-item font-size-items">1/2 glass of milk</li>
-                            <li class="ingredients-list-item font-size-items">1 teaspoon of baking powder</li>
-                            <li class="ingredients-list-item font-size-items">a pinch of salt</li>
-                            <li class="ingredients-list-item font-size-items">some still or sparkling water</li>
-                            <li class="ingredients-list-item font-size-items">oil</li>
-                            <li class="ingredients-list-item font-size-items">jam/cheese</li>
+                            <li class="ingredients-list-item">egg</li>
+                            <li class="ingredients-list-item">1 cup of floor</li>
+                            <li class="ingredients-list-item">1/2 glass of milk</li>
+                            <li class="ingredients-list-item">1 teaspoon of baking powder</li>
+                            <li class="ingredients-list-item">a pinch of salt</li>
+                            <li class="ingredients-list-item">some still or sparkling water</li>
+                            <li class="ingredients-list-item">oil</li>
+                            <li class="ingredients-list-item">jam/cheese</li>
                         </ul>
                     </section>
                 </article>
@@ -35,18 +35,18 @@
             <aside>
                 <article class="instructions flex-box">
                     <section class="instructions-box background">
-                        <h3 class="instructions-title flex-box font-size-title">Instructions</h3>
+                        <h3 class="instructions-title flex-box">Instructions</h3>
                         <ol class="instructions-list margin-padding-list">
-                            <li class="instructions-list-item font-size-items">Take a bowl and beat an egg, then combine it with flour, milk and water.</li>
-                            <li class="instructions-list-item font-size-items">Add salt and baking powder, after that combine it gently with all the ingredients.</li>
-                            <li class="instructions-list-item font-size-items">Put the bowl with the dough aside for a few minutes, so that it gets the right texture.</li>
-                            <li class="instructions-list-item font-size-items">In the meantime pour some oil over the frying pan.</li>
-                            <li class="instructions-list-item font-size-items">Once the frying pan is hot enough, you can start making pancakes. First,
+                            <li class="instructions-list-item">Take a bowl and beat an egg, then combine it with flour, milk and water.</li>
+                            <li class="instructions-list-item">Add salt and baking powder, after that combine it gently with all the ingredients.</li>
+                            <li class="instructions-list-item">Put the bowl with the dough aside for a few minutes, so that it gets the right texture.</li>
+                            <li class="instructions-list-item">In the meantime pour some oil over the frying pan.</li>
+                            <li class="instructions-list-item">Once the frying pan is hot enough, you can start making pancakes. First,
                                 fry a pancake on its one side till it turns light brown, and then flip it over.
                                 Fry it on the other side as long as you observe it is ready to serve.
                             </li>
-                            <li class="instructions-list-item font-size-items">Put the pancake on the plate and fill it with jam, cheese or whatever you prefer.</li>
-                            <li class="instructions-list-item font-size-items">Then roll it and serve with some fruit, chocolate, or even ice cream.</li>
+                            <li class="instructions-list-item">Put the pancake on the plate and fill it with jam, cheese or whatever you prefer.</li>
+                            <li class="instructions-list-item">Then roll it and serve with some fruit, chocolate, or even ice cream.</li>
                         </ol>
                     </section>
                 </article>
