Fixed indentation isuess

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
                             <li class="instructions-list-item">Add salt and baking powder, after that combine it gently with all the ingredients.</li>
                             <li class="instructions-list-item">Put the bowl with the dough aside for a few minutes, so that it gets the right texture.</li>
                             <li class="instructions-list-item">In the meantime pour some oil over the frying pan.</li>
-                            <li class="instructions-list-item">Once the frying pan is hot enough, you can start making pancakes. First,
-                                fry a pancake on its one side till it turns light brown, and then flip it over.
+                            <li class="instructions-list-item">
+                                Once the frying pan is hot enough, you can start making pancakes.
+                                First, fry a pancake on its one side till it turns light brown, and then flip it over.
                                 Fry it on the other side as long as you observe it is ready to serve.
                             </li>
                             <li class="instructions-list-item">Put the pancake on the plate and fill it with jam, cheese or whatever you prefer.</li>
