Added meta viewport tag to html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <title>Recipe for pancakes</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +16,7 @@
         </section>
         <section class="main-columns">
             <main>
-                <article class="ingredients flex-box">
+                <article class="ingredients">
                     <section class="ingredients-box background">
                         <h3 class="ingredients-title flex-box">Ingredients</h3>
                         <ul class="ingredients-list margin-padding-list">
