Changed background image, added section 'description' in html and css

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
         </section>
         <section class="main-columns">
             <main>
+                <article class="description">
+                    <section class="description-box background">
+                        <h3 class="description-title flex-box">Description</h3>
+                        <span class="description-text">
+                            English pancakes are different from American pancakes.
+                            They are much thinner and contain no leavening.
+                            They are closer to a French Crepe, only slightly thicker.
+                            Traditionally they are served on Shrove Tuesday, but are enjoyed year-around.
+                            They are best served straight from the pan. In my house the race is to try and make them faster than my children can eat them.
+                        </span>
+                    </section>
+                </article>
                 <article class="ingredients">
                     <section class="ingredients-box background">
                         <h3 class="ingredients-title flex-box">Ingredients</h3>
@@ -34,7 +46,7 @@
             </main>
             <aside>
                 <article class="instructions flex-box">
-                    <section class="instructions-box background">
+                    <section class="instructions-box background-instructions">
                         <h3 class="instructions-title flex-box">Instructions</h3>
                         <ol class="instructions-list margin-padding-list">
                             <li class="instructions-list-item">Take a bowl and beat an egg, then combine it with flour, milk and water.</li>
@@ -53,11 +65,6 @@
                 </article>
             </aside>
         </section>
-        <footer class="flex-box">
-            <section class="footer-box background">
-                <p class="footer-text flex-box">Enjoy your meal!</p>
-            </section>
-        </footer>
     </section>
 </body>
 </html>
