Added image to html and used it in media queries, corrected isuess with all of section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <section class="title flex-box">
             <h1 class="main-title background">Pancakes</h1>
         </section>
+        <img class="image" src="pancakes2.jpg" alt="pancakes">
         <section class="main-columns">
             <main>
                 <article class="description">
